--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@
 
 tasks:
   - init: |
+      curl -sL --http1.1 https://cnfl.io/cli | sh -s -- -b /home/gitpod/.local/bin/ && \
       pip install -r requirements.txt && \
       curl -sSOL https://archive.ics.uci.edu/ml/machine-learning-databases/00279/SUSY.csv.gz && \
       gunzip SUSY.csv.gz
