--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,12 +7,10 @@ tasks:
       gunzip SUSY.csv.gz
   - name: setup
     init: |
-      python -m venv /workspace/.venv && \
-      source /workspace/.venv/bin/activate && \
       pip install --upgrade pip && \
       pip install -r requirements.txt && \
       curl -sL --http1.1 https://cnfl.io/cli | sh -s -- -b /workspace/bin && \
       /workspace/bin/confluent version
     command: |
       ln -s /workspace/bin/confluent /home/gitpod/.local/bin/confluent
-      source /workspace/.venv/bin/activate
+      confluent version
